--- a/index.html
+++ b/index.html
@@ -29,44 +29,313 @@
             <div class="nav-address border">
                 <p class="add-f">deliver to</p>
                 <div class="add-icon">
-                <i class="fa-solid fa-location-dot"></i>
-                <p class="add-s">india</p>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="add-s">india</p>
                 </div>
             </div>
 
-                                 <!-- box3 -->
+            <!-- box3 -->
             <div class="nav-search">
                 <select class="Search-select">
                     <option>All</option>
                 </select>
-                <input placeholder="Search Amazon"class="Search-input"            >
+                <input placeholder="Search Amazon" class="Search-input">
                 <div class="Search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
 
-                        <!-- box 4 -->
+            <!-- box 4 -->
 
-             <div class="nav-language">
+            <div class="nav-language">
                 <div class="flag">
-                  <i class="fa-solid fa-flag"></i>  
+                    <i class="fa-solid fa-flag"></i>
                 </div>
                 <option>EN</option>
-             </div>
-
-                  <!-- box 5 -->
-            <div  class="nav-sign">
-            <p class="f">Hello,sign in</p>
-            <p  class="s">Account & Lists</p>
-            
             </div>
 
 
+            <div class="nav-sign border">
+                <p><span>Hello,sign in</span></p>
+                <p class="s">Account & Lists</p>
+
+            </div>
+
+            <div class="return border">
+                <p><span>Return</span></p>
+                <p class="s">& Orders</p>
+            </div>
+
+            <div class="nav-cart border">
+
+                <i class="fa-solid fa-cart-arrow-down"></i>
+                cart
+            </div>
+        </div>
+        <div class="nav-link ">
+            <div class="menu " style="display: flex;">
+                <i class="fa-solid fa-list">All</i>
+
+                <div class="p border">Fresh</div>
+                <div class="p border">MX Player</div>
+                <div class="p border">Sell</div>
+                <div class="p border">Bestsellers</div>
+                <div class="p border">Mobile</div>
+                <div class="p border">Today's Deal</div>
+                <div class="p border">Custom Service</div>
+                <div class="p border">Prime</div>
+                <div class="p border">New Releases</div>
+                <div class="p border">Amazon Play</div>
+                <div class="p border">Fashion</div>
+                <div class="p border">Electronics</div>
+                <div class="p border">Gift Card</div>
+                <div class="p border">Computer</div>
 
 
+
+
+
+
+            </div>
+    </header>
+    <div class="image">
+
+        <img alt="Deals"
+            src="https://images-eu.ssl-images-amazon.com/images/G/31/sudipta/GW/BAU/Budgetunrec._CB777837018_.jpg"
+            height="100%" width="1500px"
+            data-a-hires="https://images-eu.ssl-images-amazon.com/images/G/31/sudipta/GW/BAU/Budgetunrec._CB777837018_.jpg">
+
+    </div>
+    <div class="shop">
+        <div class="container">
+            <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/81wRDOUWZEL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/618+TCm3XoL._AC_SY145_.jpg" alt="">
+            </div>
+
+            <div class="box 2">
+                <h2>Revamp your home in </h2>
+                <h3>style</h3>
+                <img
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2024/Gateway/BTFGW/PCQC/New/1x/final/186x116_Home_lighting_2._SY116_CB555624324_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2024/Gateway/BTFGW/PCQC/New/1x/final/186x116_Home_storage_1._SY116_CB555624324_.jpg"
+                    alt="">
+            </div>
+
+            <div class="box 3">
+
+                <h1>Bulk order discounts +Up</h1>
+                <h2>to 18 % GST savings</h2>
+                <img
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/nov/bau/ain/gw/Laptops_186_116_10._SY116_CB777673831_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/dec/bau/ain/gw/ABdelivery_186_116._SY116_CB776314701_.jpg"
+                    alt="">
+            </div>
+
+             <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/812vmmHIwvL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/61UE51azLWL._AC_SY145_.jpg" alt="">
+            </div>
 
         </div>
-    </header>
+    </div>
+
+    <!-- 2 card -->
+
+    <div class="shop">
+        <div class="container">
+            <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/812vmmHIwvL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/61UE51azLWL._AC_SY145_.jpg" alt="">
+            </div>
+
+            <div class="box 2">
+                <h2>Revamp your home in </h2>
+                <h3>style</h3>
+                <img src="https://m.media-amazon.com/images/I/51r6VRZPlFL._AC_SY175_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2024/Gateway/BTFGW/PCQC/New/1x/final/186x116_Home_storage_1._SY116_CB555624324_.jpg"
+                    alt="">
+            </div>
+
+            <div class="box 3">
+
+                <h1>Bulk order discounts +Up</h1>
+                <h2>to 18 % GST savings</h2>
+                <img
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/nov/bau/ain/gw/Laptops_186_116_10._SY116_CB777673831_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/dec/bau/ain/gw/ABdelivery_186_116._SY116_CB776314701_.jpg"
+                    alt="">
+            </div>
+             <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/812vmmHIwvL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/61UE51azLWL._AC_SY145_.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="shop">
+        <div class="container">
+            <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/81wRDOUWZEL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/618+TCm3XoL._AC_SY145_.jpg" alt="">
+            </div>
+
+            <div class="box 2">
+                <h2>Revamp your home in </h2>
+                <h3>style</h3>
+                <img
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2024/Gateway/BTFGW/PCQC/New/1x/final/186x116_Home_lighting_2._SY116_CB555624324_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2024/Gateway/BTFGW/PCQC/New/1x/final/186x116_Home_storage_1._SY116_CB555624324_.jpg"
+                    alt="">
+            </div>
+
+            <div class="box 3">
+
+                <h1>Bulk order discounts +Up</h1>
+                <h2>to 18 % GST savings</h2>
+                <img
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/nov/bau/ain/gw/Laptops_186_116_10._SY116_CB777673831_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/dec/bau/ain/gw/ABdelivery_186_116._SY116_CB776314701_.jpg"
+                    alt="">
+            </div>
+             <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/812vmmHIwvL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/61UE51azLWL._AC_SY145_.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="shop">
+        <div class="container">
+            <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/81wRDOUWZEL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/618+TCm3XoL._AC_SY145_.jpg" alt="">
+            </div>
+
+            <div class="box 2">
+                <h2>Revamp your home in </h2>
+                <h3>style</h3>
+                <img
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2024/Gateway/BTFGW/PCQC/New/1x/final/186x116_Home_lighting_2._SY116_CB555624324_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/IMG20/Home/2024/Gateway/BTFGW/PCQC/New/1x/final/186x116_Home_storage_1._SY116_CB555624324_.jpg"
+                    alt="">
+            </div>
+
+            <div class="box 3">
+
+                <h1>Bulk order discounts +Up</h1>
+                <h2>to 18 % GST savings</h2>
+                <img
+                    src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/nov/bau/ain/gw/Laptops_186_116_10._SY116_CB777673831_.jpg">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/AmazonBusiness/img25/dec/bau/ain/gw/ABdelivery_186_116._SY116_CB776314701_.jpg"
+                    alt="">
+            </div>
+             <div class="box 1">
+                <h1>Continue shopping deals</h1>
+
+                <img src="https://m.media-amazon.com/images/I/812vmmHIwvL._AC_SY145_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/61UE51azLWL._AC_SY145_.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="back">
+            <p> Back to top</p>
+        </div>
+
+        <div class="back2">
+
+
+            <div class="ul1">
+                <ul>
+                    <h3>Get to know </h3>
+                    <li>About Amazon</li>
+                    <li>Careers</li>
+                    <li>Press Release</li>
+                    <li>Amazon Science</li>
+                </ul>
+            </div>
+
+            <div class="ul2"></div>
+
+
+            <ul>
+                <h3>Connect With US</h3>
+                <li>Google</li>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+
+            </ul>
+
+
+            <div class="ul3"></div>
+            <ul>
+                <h3>Make Money with US</h3>
+                <li>Sell on Amzon</li>
+                <li>Sell under Amazon Accelerator</li>
+                <li>Protect and Build Your Brand</li>
+                <li>Amazon Global Selling</li>
+                <li>Become an Affiliate</li>
+                <li>Fulfilment by Amazon</li>
+                <li>Advertise Your Products</li>
+                <li>Amazon Pay on Merchants</li>
+            </ul>
+
+            <div class="ul4"></div>
+            <ul>
+                <h3>Let US Help You</h3>
+                <li>Your Account </li>
+                <li>Return Center</li>
+                <li>Recalls and Product Safety Alerts</li>
+                <li>100% Purchase Protection</li>
+                <li>Amazon App development</li>
+                <li>Help</li>
+            </ul>
+
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+
+        </div>
+
+        <hr>
+
+        <div class="back3">
+            <p>Conditions of Use & Sale
+                Privacy Notice
+                Interest-Based Ads
+                © 1996-2026, Amazon.com, Inc. or its affiliates</p>
+        </div>
+
+
+    </div>
+
+
+
+
+
+
 </body>
 
 </html>
